# dagster-essentials-football

./: .gitignore  README.md  pyproject.toml
src/dagster_essentials_football/defs/: partitions.py  resources.py
src/dagster_essentials_football/defs/assets/: clubs.py  constants.py  football.py  leagues.py  players.py
utils/: plot.py
