[project]
name = "dagster_essentials_football"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dagster==1.12.1",
    "fastparquet>=2024.11.0",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "dagster-duckdb",
    "pandas[parquet]",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_essentials_football"
registry_modules = [
    "dagster_essentials_football.components.*",
]


